syntax = "proto3";
package pb;
option go_package = "internal/infra/grpc/pb";

message Order {
  string id = 1;
  float price = 2;
  float tax = 3;
  float final_price = 4;
}

// CreateOrder
message CreateOrderRequest {
  string id = 1;
  float price = 2;
  float tax = 3;
}

// ListOrders
message ListOrdersRequest {}

message ListOrdersResponse {
  repeated Order orders = 1;
}

// OrderService
service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (Order);
  rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse);
}